--- a/package.json
+++ b/package.json
@@ -22,5 +22,5 @@
     "gh-pages": "^1.1.0"
   },
   "author": "Pratik Singh",
-  "homepage": "https://pratikju.github.io/weather-app/"
+  "homepage": "https://pratikju.github.io/weather-app"
 }
